--- a/materifungsi.html
+++ b/materifungsi.html
@@ -102,7 +102,7 @@
                   <p><b>1. Definisi Fungsi</b></p>
                   <p style="text-align: justify">Fungsi, dalam istilah matematika adalah pemetaan setiap anggota sebuah himpunan (dinamakan</br>
                   sebagai domain) kepada anggota himpunan yang lain (dinamakan sebagai kodomain).<br>
-                  Fungsi biasanya diberi nama seperti f, g, dan sebagainya. Dan biasa kita tulis fungsi f sebagai f: a -> B<br><br>
+                  Fungsi biasanya diberi nama seperti f, g, dan sebagainya. Biasa kita tulis fungsi f sebagai f: a -> B<br><br>
                   
                   Jika a -> A maka anggota himpunan B merupakan kaitan dari a dapat ditulis sebagai f(a). Elemen f(a)<br>
                   tersebut dinamakan nilai fungsi dari a, atau peta dari a. Himpunan semua peta disebut daerah nilai<br>
@@ -167,8 +167,10 @@
                   konstan jika daerah nilai dari fungsi f hanya terdiri dari satu elemen.<br> 
                   contoh 1 : <br>
                   <!--contoh belum dibuat-->
+                  //tolong ditambahkan
                   contoh 2 : <br>
                   <!--contoh belum dibuat-->
+                   //tolong ditambahkan
                   <p><b>3. Komposisi Fungsi</b></p>
                   Anggap f : A -> B dan g : B -> C<br> 
                   Didapat fungsi baru (g o f) : A -> C<br> 
@@ -255,7 +257,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
-                        <p>© 2019 All Rights Reserved. Design by <a href="https://html.design/"> knodua.space</a></p>
+                        <p>© 2023 All Rights Reserved. Design by <a href="https://html.design/"> knodua.space</a></p>
                      </div>
                   </div>
                </div>
