--- a/materifungsi.html
+++ b/materifungsi.html
@@ -231,7 +231,7 @@
                      <ul class="link_menu">
                         <li><a href="">Ridho Fitra Palasa</a></li>
                         <li><a href="">Hayatun nufus</a></li>
-                        <li><a href="">Delly Murti</a></li>
+                        <li><a href="">Nurul Awal Delly Murti</a></li>
                         <li><a href="">Anita Meliyanti</a></li>
                         <li><a href="">Humaidi Fikri</a></li>
                      </ul>
