--- a/materifungsi.html
+++ b/materifungsi.html
@@ -231,7 +231,7 @@
                      <ul class="link_menu">
                         <li><a href="">Ridho Fitra Palasa</a></li>
                         <li><a href="">Hayatun nufus</a></li>
-                        <li><a href="">Delly Murti</a></li>
+                        <li><a href="">Nurul Awal Delly Murti</a></li>
                         <li><a href="">Anita Meliyanti</a></li>
                         <li><a href="">Humaidi Fikri</a></li>
                      </ul>
@@ -255,7 +255,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
-                        <p>© 2019 All Rights Reserved. Design by <a href="https://html.design/"> knodua.space</a></p>
+                        <p>© 2023 All Rights Reserved. Design by <a href="https://html.design/"> knodua.space</a></p>
                      </div>
                   </div>
                </div>
